Add GLPv3 license

--- a/doc/konsolenfisch.1
+++ b/doc/konsolenfisch.1
@@ -15,33 +15,35 @@ Load Lua script file
 \fB\-\-version\fR \fB\-v\fR
 Program version
 .SH COPYRIGHT
-Copyright \(co 2025 Ivan Guerreschi <ivan.guerreschi.dev@gmail.com>
-All rights reserved.
+.SS GNU GENERAL PUBLIC LICENSE
+Version 3, 29 June 2007
 .PP
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are met:
+Copyright (C) 2007 Free Software Foundation, Inc. https://fsf.org/
 .PP
-  1. Redistributions of source code must retain the above copyright notice, this
-     list of conditions and the following disclaimer.
+Everyone is permitted to copy and distribute verbatim copies
+of this license document, but changing it is not allowed.
+.SS Preamble
+The GNU General Public License is a free, copyleft license for
+software and other kinds of works.
 .PP
-  2. Redistributions in binary form must reproduce the above copyright notice,
-     this list of conditions and the following disclaimer in the documentation
-     and/or other materials provided with the distribution.
+The licenses for most software and other practical works are designed
+to take away your freedom to share and change the works.  By contrast,
+the GNU General Public License is intended to guarantee your freedom to
+share and change all versions of a program--to make sure it remains free
+software for all its users.
 .PP
-  3. Neither the name of the copyright holder nor the names of its
-     contributors may be used to endorse or promote products derived from
-     this software without specific prior written permission.
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
 .PP
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
-FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
-DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
-SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
-CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
-OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see https://www.gnu.org/licenses/.
+.SH "FULL LICENSE"
+For the complete GNU General Public License text, visit:
+.UR https://www.gnu.org/licenses/gpl-3.0.html
+https://www.gnu.org/licenses/gpl-3.0.html
+.UE	
 .PP
 .SH ISSUE
 ivan.guerreschi.dev@gmail.com github.com/nullzeiger/konsolenfisch/issue
